--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* General body styling for dark theme */
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #181818;
+    
     color: #f0f0f0;
     margin: 0;
     padding: 0;
@@ -10,6 +10,11 @@ body {
     align-items: center;
     height: 100vh;
     text-align: center;
+    background-image: url('public/images/pink + orange.jpg'); /* Update the path if needed */
+    background-size: cover; /* Makes the image cover the entire screen */
+    background-position: center; /* Centers the image */
+    background-attachment: fixed; /* Ensures the image doesn't scroll */
+    color: white;
 }
 
 /* Centering all content inside the app-container */
@@ -18,8 +23,8 @@ body {
     max-width: 600px;
     padding: 20px;
     border-radius: 15px;
-    background-color: #242424;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 10);
     margin: 20px;
     text-align: center;
 }
