--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* General body styling for dark theme */
+
 body {
     font-family: 'Arial', sans-serif;
     
@@ -10,7 +10,7 @@ body {
     align-items: center;
     height: 100vh;
     text-align: center;
-    background-image: url('public/images/pink + orange.jpg'); /* Update the path if needed */
+    background-image: url('public/images/pink + orange.jpg'); 
     background-size: cover; /* Makes the image cover the entire screen */
     background-position: center; /* Centers the image */
     background-attachment: fixed; /* Ensures the image doesn't scroll */
